[package]
name = "toolbox"
version = "0.1.0"
authors = ["Oliver Chalk"]
edition = "2021"
readme = "README.md"

[lints.clippy]
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
# See `clippy.toml`.
disallowed_methods = "warn"

[features]
default = []
tracing = ["dep:const_format", "dep:tracing", "dep:tracing-appender", "dep:tracing-subscriber"]
version = ["dep:const_format"]

[dependencies]
const_format = { version = "0.2.32", optional = true }
tracing = { version = "0.1.40", optional = true }
tracing-appender = { version = "0.2.3", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"], optional = true }
